# faSTM

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  DESIGN.html  DESIGN.md  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml  pkgdown.yaml
R/: as-stm-object.R  broom.R  compat.R  conveniences.R  corpus.R  data.R  estimate-effect.R  extendr-wrappers.R  faSTM-package.R  heldout.R  inspect.R  messages.R  niche.R  plot.R  posterior.R  predict.R  search-k.R  select-model.R  stm-helpers.R  stm.R
articles/: beyond-stm.html  beyond-stm.md  faSTM.html  faSTM.md  index.html  index.md  validation.html  validation.md
benchmarks/: bench_vs_stm.R
data/: congress.rda  poliblog.rda
data-raw/: congress.R
inst/: CITATION  LICENSE.note
inst/examples/: quickstart-quanteda.R  replicate-stm.R  speed-bench.R
inst/parity/: spectral_recover_parity.R
man/: alignCorpus.Rd  align_corpus.Rd  ame.Rd  as.data.frame.faSTM_searchk.Rd  asSTMCorpus.Rd  as_corpus.Rd  augment.faSTM.Rd  calcfrex.Rd  checkBeta.Rd  check_residuals.Rd  coherence.Rd  congress.Rd  content_topics.Rd  convertCorpus.Rd  effect_estimates.Rd  estimateEffect.Rd  eval_heldout.Rd  exclusivity.Rd  faSTM-package.Rd  find_thoughts.Rd  find_topic.Rd  fitNewDocuments.Rd  fit_new_documents.Rd  fit_stm.Rd  frex_scores.Rd  from_tidy.Rd  glance.faSTM.Rd  infer_theta_new.Rd  label_topics.Rd  lda_init_beta.Rd  makeDesignMatrix.Rd  make_dt.Rd  make_heldout.Rd  many_topics.Rd  multi_stm.Rd  optimizeDocument.Rd  permutation_test.Rd  plot.faSTM.Rd  plot.faSTM_effect.Rd  plot.faSTM_searchk.Rd  (+20 more)
news/: index.html  index.md
reference/: alignCorpus.html  alignCorpus.md  align_corpus.html  align_corpus.md  ame.html  ame.md  as.data.frame.faSTM_searchk.html  as.data.frame.faSTM_searchk.md  asSTMCorpus.html  asSTMCorpus.md  as_corpus.html  as_corpus.md  augment.faSTM.html  augment.faSTM.md  calcfrex.html  calcfrex.md  calcscore.html  checkBeta.html  checkBeta.md  check_residuals.html  check_residuals.md  coherence.html  coherence.md  congress.html  congress.md  content_topics.html  content_topics.md  convertCorpus.html  convertCorpus.md  effect_estimates.html  effect_estimates.md  estimateEffect.html  estimateEffect.md  eval_heldout.html  eval_heldout.md  exclusivity.html  exclusivity.md  faSTM-package.html  faSTM-package.md  faSTM.html  (+85 more)
src/: Makevars.in  Makevars.win.in  entrypoint.c  faSTM-win.def
src/rust/: Cargo.toml  document.rs
src/rust/src/: lib.rs
tests/: testthat.R
tests/testthat/: test-recovery-vs-stm.R  test-standalone.R  test-stm-nongraph-gaps.R
vignettes/: beyond-stm.Rmd  faSTM.Rmd  validation.Rmd
