[package]
name = "faSTM"
publish = false
version = "0.0.0"
edition = "2021"
rust-version = "1.65"

[lib]
crate-type = ["staticlib", "lib"]
name = "faSTM"

# Build-time wrapper generator (run by Makevars: `cargo run --bin document`).
[[bin]]
name = "document"
path = "document.rs"

[dependencies]
extendr-api = "0.7"

# The fitting core: the thin, dependency-light `topica-core` workspace member
# (CTM/STM/SAGE + CVB0; deps = rand/rand_chacha/rayon/regex only). This is what
# makes faSTM CRAN-vendorable — no pyo3/numpy/JVM, no full topica (topica#242).
# topica-core workspace member from the topica v0.25.0 release (topica#242). This
# thin crate (rand/rand_chacha/rayon/regex; no pyo3/numpy/JVM) is what faSTM vendors for CRAN.
topica-core = { git = "https://github.com/nealcaren/topica", tag = "v0.25.0", default-features = false }
# DEV: topica-core = { path = "../../../topica/topica-core", default-features = false }

# Must match topica's lockfile so the `Rng` trait bound and the seed stream are
# byte-identical to topica's own STM fits (parity).
rand = "0.8"
rand_chacha = "0.3"

# Scoped thread pool for the parallel variational E-step (num_threads control).
rayon = "1"

[profile.release]
lto = true
codegen-units = 1
